# cicd-auto

./: .gitignore  .pre-commit-config.yaml  README.md  action.yml  pyproject.toml
cicd_auto/: __init__.py  analyzer.py  cli.py  detectors.py  generator.py  models.py
cicd_auto/templates/buildkite/: pipeline.yml
cicd_auto/templates/github/: go_cd.yml  go_ci.yml  node_cd.yml  node_ci.yml  python_cd.yml  python_ci.yml
cicd_auto/templates/gitlab/: go_ci.yml  node_ci.yml  python_ci.yml
cicd_auto/templates/jenkins/: Jenkinsfile.groovy
docs/: github-action.md
tests/: __init__.py  test_analyzer.py  test_generator.py
