[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cicd-auto"
dynamic = ["version"]
description = "Auto-generate production-ready CI/CD pipelines for any project"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Brian Hopkins", email = "btotharye@gmail.com" },
]
keywords = [
    "ci-cd",
    "github-actions",
    "gitlab-ci",
    "jenkins",
    "buildkite",
    "automation",
    "devops",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
    "Topic :: Software :: Build Tools",
]
dependencies = [
    "click>=8.1.0",
    "pyyaml>=6.0",
    "jinja2>=3.1.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "pathspec>=0.11.0",  # For .gitignore parsing
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.4.0",
]
claude = [
    "anthropic>=0.7.0",
]
all = [
    "cicd-auto[dev,claude]",
]

[project.scripts]
cicd-auto = "cicd_auto.cli:main"

[tool.hatch.version]
path = "cicd_auto/__init__.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=cicd_auto --cov-report=term-missing --cov-report=html -v"

[tool.coverage.run]
omit = [
    "*/tests/*",
    "*/site-packages/*",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]  # Line too long (handled by formatter)

[tool.ruff.lint.isort]
known-first-party = ["cicd_auto"]
